--- a/product/templates/product/index.html
+++ b/product/templates/product/index.html
@@ -1,6 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	<head>
+
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
