--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -4,10 +4,10 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="{% url "product:home" %}">Home</a>
         {% if request.user.is_authenticated %}
-          <a class="nav-link active" href="{% url "customers:user_logout" %}">Logout</a>
+          <a class="nav-link active" href="{% url "accounts:user_logout" %}">Logout</a>
         {% else %}
-          <a class="nav-link active" href="{% url "customers:user_register" %}">Signup</a>
-          <a class="nav-link active" href="{% url "customers:user_login" %}">Login</a>
+          <a class="nav-link active" href="{% url "accounts:user_register" %}">Signup</a>
+          <a class="nav-link active" href="{% url "accounts:user_login" %}">Login</a>
          {% endif %}
       </div>
   </div>
