--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Details</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <h2>{{ product.name }}</h2>
+    <small>{{ product.created }}</small>
+    <p>{{ product.price }}</p>
+    <img src="{{ product.image.url }}" style="width: 300px;">
+{% endblock %}
