--- a/product/templates/product/index.html
+++ b/product/templates/product/index.html
@@ -87,11 +87,9 @@
 						<li><a href="{% url "accounts:user_register" %}">Signup</a></li>
 						<li><a href="{% url "accounts:user_login" %}">Login</a></li>
                         {% endif %}
-						<li><a href="#">Categories</a></li>
-						<li><a href="#">Laptops</a></li>
-						<li><a href="#">Smartphones</a></li>
-						<li><a href="#">Cameras</a></li>
-						<li><a href="#">Accessories</a></li>
+                         {% for category in categories %}
+                            <li><a href="{{ category.get_absolute_url }}"> {{ category.name }}</a></li>
+                         {% endfor %}
 					</ul>
 					<!-- /NAV -->
 				</div>
@@ -100,21 +98,17 @@
 			<!-- /container -->
 		</nav>
 		<!-- /NAVIGATION -->
+{#        {% for category in categories %}#}
+{#            <a href="{{ category.get_absolute_url }}" class="btn btn-info"> {{ category.name }}</a>#}
+{#        {% endfor %}#}
+{#        <br/><br/>#}
         {% for product in products %}
-            <div class="card" style="width: 18rem;">
-              <img src="{{ product.image.url }}" class="card-img-top">
+            <div class="card" style=" width: 30rem; display: inline-block; ">
+              <img src="{{ product.image.url }}" class="card-img-top" style="width: 250px">
               <div class="card-body">
                  <a href="{{ product.get_absolute_url }}" class="card-title">{{ product.title }}</a>
               </div>
             </div>
         {% endfor %}
-		<!-- jQuery Plugins -->
-{#		<script src="js/jquery.min.js"></script>#}
-{#		<script src="js/bootstrap.min.js"></script>#}
-{#		<script src="js/slick.min.js"></script>#}
-{#		<script src="js/nouislider.min.js"></script>#}
-{#		<script src="js/jquery.zoom.min.js"></script>#}
-{#		<script src="js/main.js"></script>#}
-
 	</body>
 </html>
