--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -2,6 +2,12 @@
 {% block content %}
     <h2>{{ product.name }}</h2>
     <small>{{ product.created }}</small>
-    <p>{{ product.price }}</p>
+    <p>{{ product.price }} </p>
     <img src="{{ product.image.url }}" style="width: 300px;">
+    <p>{{ product.description }}</p><br/><br/>
+{#    <form action="" method="post">#}
+{#      { % csrf_token % }#}
+{#      {{ form }}#}
+{#       <input type="submit" value="add to cart">#}
+{#    </form>#}
 {% endblock %}
