--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -2,4 +2,10 @@
 {% block content %}
     <h3>Checkout</h3>
     <p>Total: {{ order.get_total_price }} </p>
+    <br><br>
+    <form action="{% url 'orders:apply_coupon' order.id %}" method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="submit" value="apply">
+    </form>
 {% endblock %}
