--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -9,6 +9,7 @@
           <th scope="col">Quantity</th>
           <th scope="col">Unit Price</th>
           <th scope="col">Total Price</th>
+          <th scope="col"></th>
        </tr>
      </thead>
     <tbody>
