improve order history and checkout page adding api

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,9 @@
     </div>
     <div class="form-group">
         <input class="btn btn-primary" type="submit" value="login">
+        <a class="btn btn-secondary" href="{% url "accounts:user_register" %}">signup</a>
     </div>
     </form>
+{#    <a class="btn btn-secondary" href="{% url "accounts:user_register" %}">signup</a>#}
 </div>
 {% endblock %}
