--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -8,6 +8,6 @@
     <form action="{% url 'orders:cart_add' product.id %}" method="post">
       {% csrf_token %}
       {{ form }}
-      <input type="submit" value="add to cart">
+      <input class="btn btn-secondary" type="submit" value="add to cart">
     </form>
 {% endblock %}
