--- a/accounts/templates/accounts/order_detail.html
+++ b/accounts/templates/accounts/order_detail.html
@@ -10,6 +10,7 @@
           <th scope="col">product</th>
           <th scope="col">price</th>
           <th scope="col">quantity</th>
+          <th scope="col">status</th>
        </tr>
      </thead>
     <tbody>
@@ -19,6 +20,8 @@
       <td>{{ item.product }}</td>
       <td>{{ item.price }}</td>
       <td>{{ item.quantity }}</td>
+      <td>{{ item.status }}</td>
+
     </tr>
     {% endfor %}
     </tbody>
