--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -4,28 +4,38 @@
     <table class="table table-dark table-striped">
        <thead>
         <tr>
-          <th scope="col">#</th>
+          <th class="text-left" scope="col">#</th>
           <th scope="col">Name</th>
           <th scope="col">Quantity</th>
           <th scope="col">Unit Price</th>
           <th scope="col">Total Price</th>
+          <th scope="col">Remove</th>
+          <th class="text-center"  scope="col">Update</th>
           <th scope="col"></th>
        </tr>
      </thead>
     <tbody>
     {% for item  in cart  %}
-    <tr>
-      <th scope="row">{{ forloop.counter }}</th>
-      <td>{{ item.product }}</td>
-      <td>{{ item.quantity }}</td>
-      <td>{{ item.price }}</td>
-      <td>{{ item.total_price }}</td>
-      <td><a href="{% url 'orders:cart_remove' item.product.id  %}">remove</a></td>
-    </tr>
+        <form action="" method="post">
+        {% csrf_token %}
+          <tr>
+              <th scope="row">{{ forloop.counter }}</th>
+              <td>{{ item.product }}</td>
+              <td>
+                  <input type="number" name="quantity" id="{{ item.product.id }}" value="{{ item.quantity }}" pattern="[0-9]*">
+                  <input type="hidden" class="visually-hidden" name="item_id" id="item_id" value="{{ item.product.id }}">
+              </td>
+              <td>{{ item.price }}</td>
+              <td>{{ item.total_price }}</td>
+              <td><a href="{% url 'orders:cart_remove' item.product.id  %}">remove</a></td>
+              <td class="text-center small--hide"><input type="submit" name="update" value="&#x21bb" class="btn btn--secondary" style="color: white"></td>
+              <td></td>
+          </tr>
+        </form>
     {% endfor %}
     <tr>
         <td>Total</td>
-        <td colspan="4"></td>
+        <td colspan="6"></td>
         <td>{{ cart.get_total_price }}</td>
     </tr>
     </tbody>
