--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -18,6 +18,7 @@
            {% endfor %}
          </select>
     </label>
-    <a href="{% url 'product:home' %}" class="btn btn-primary">pay</a>
+
+    <a href="{% url 'orders:pay' %}" class="btn btn-primary">pay</a>
 
 {% endblock %}
