improve detail page

--- a/accounts/templates/accounts/addresses.html
+++ b/accounts/templates/accounts/addresses.html
@@ -28,6 +28,10 @@
     </tbody>
     </table>
     <br>
-    <a href="{% url 'accounts:add_address'  %}">add new address</a>
+    <a href="{% url 'accounts:add_address'  %}">
+     <span class="btn btn-default btn-dark">
+         add new address
+     </span>
+    </a>
 {% endblock %}
 
