--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,13 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h2>{{ product.name }}</h2>
-    <small>{{ product.created }}</small>
-    <p>{{ product.price }} </p>
-    <img src="{{ product.image.url }}" style="width: 300px;">
-    <p>{{ product.description }}</p><br/><br/>
-    <form action="{% url 'orders:cart_add' product.id %}" method="post">
-      {% csrf_token %}
-      {{ form }}
-      <input class="btn btn-secondary" type="submit" value="add to cart">
-    </form>
+    <h2>{{ product.title }}</h2>
+{#    <small>created_date: {{ product.created }}</small>#}
+    <div>
+          <div>
+            <div style="display:inline-block">
+                <img src="{{ product.image.url }}" style="width: 300px;">
+            </div>
+            <div style="display:inline-block" >
+                <h4 class="h4">price: {{ product.price }}$</h4>
+                <br>
+                 <p class="lh-base, text-lowercase">
+                    <span style="display: inline-block"> {{ product.description }}</span>
+                 </p>
+            </div>
+        </div>
+        <br/><br/>
+        <form action="{% url 'orders:cart_add' product.id %}" method="post">
+          {% csrf_token %}
+          {{ form }}
+          <input class="btn btn-secondary" type="submit" value="add to cart">
+        </form>
+    </div>
 {% endblock %}
